# liveMediaStreamer

./: .gitignore  Dockerfile  Doxyfile  Makefile.am  README  README.md  autogen.sh  configure.ac  google.cfg  profileDasher.sh  profileVideoMixer.sh  testvideosplitter  tv3.cfg
src/: AVFramedQueue.cpp  AVFramedQueue.hh  AudioCircularBuffer.cpp  AudioCircularBuffer.hh  AudioFrame.cpp  AudioFrame.hh  AudioFrameQueue.cpp  AudioFrameQueue.hh  Callbacks.cpp  Callbacks.hh  Controller.cpp  Controller.hh  Event.cpp  Event.hh  Filter.cpp  Filter.hh  Frame.cpp  Frame.hh  FrameQueue.cpp  FrameQueue.hh  IOInterface.cpp  IOInterface.hh  IOProcessorInterface.cpp  IOProcessorInterface.hh  InterleavedAudioFrame.cpp  InterleavedAudioFrame.hh  InterleavedVideoFrame.cpp  InterleavedVideoFrame.hh  Makefile.am  Path.cpp  Path.hh  PipelineManager.cpp  PipelineManager.hh  PlanarAudioFrame.cpp  PlanarAudioFrame.hh  ProcessorInterface.cpp  ProcessorInterface.hh  Runnable.cpp  Runnable.hh  SlicedVideoFrameQueue.cpp  (+28 more)
src/libi2dash/src/: i2libdash.c  i2libisoff.c
src/modules/: CustomScheduler.cpp  CustomScheduler.hh
src/modules/V4LCapture/: V4LCapture.cpp  V4LCapture.hh
src/modules/audioDecoder/: AudioDecoderLibav.cpp  AudioDecoderLibav.hh
src/modules/audioEncoder/: AudioEncoderLibav.cpp  AudioEncoderLibav.hh
src/modules/audioMixer/: AudioMixer.cpp  AudioMixer.hh
src/modules/dasher/: DashAudioSegmenter.cpp  DashAudioSegmenter.hh  DashVideoSegmenter.cpp  DashVideoSegmenter.hh  DashVideoSegmenterAVC.cpp  DashVideoSegmenterAVC.hh  DashVideoSegmenterHEVC.cpp  DashVideoSegmenterHEVC.hh  Dasher.cpp  Dasher.hh  MpdManager.cpp  MpdManager.hh  i2context.h  i2libdash.c  i2libdash.h  i2libisoff.c  i2libisoff.h
src/modules/decoderPi/: DecoderPi.cpp  DecoderPi.hh
src/modules/headDemuxer/: HeadDemuxerLibav.cpp  HeadDemuxerLibav.hh
src/modules/liveMediaInput/: ExtendedRTSPClient.hh  H264QueueSink.cpp  H264QueueSink.hh  H264VideoSdpParser.cpp  H264VideoSdpParser.hh  Handlers.cpp  Handlers.hh  QueueSink.cpp  QueueSink.hh  SourceManager.cpp  SourceManager.hh
src/modules/liveMediaOutput/: ADTSQueueServerMediaSubsession.cpp  ADTSQueueServerMediaSubsession.hh  ADTSStreamParser.cpp  ADTSStreamParser.hh  AudioQueueServerMediaSubsession.cpp  AudioQueueServerMediaSubsession.hh  Connection.cpp  Connection.hh  CustomMPEG4GenericRTPSink.cpp  CustomMPEG4GenericRTPSink.hh  DashFileSink.cpp  DashFileSink.hh  DashSegmenterAudioSource.cpp  DashSegmenterAudioSource.hh  DashSegmenterVideoSource.cpp  DashSegmenterVideoSource.hh  H264QueueServerMediaSubsession.cpp  H264QueueServerMediaSubsession.hh  H264QueueSource.cpp  H264QueueSource.hh  H264StartCodeInjector.cpp  H264StartCodeInjector.hh  H264VideoStreamSampler.cpp  H264VideoStreamSampler.hh  H264or5QueueServerMediaSubsession.cpp  H264or5QueueServerMediaSubsession.hh  H264or5QueueSource.cpp  H264or5QueueSource.hh  H264or5StartCodeInjector.cpp  H265QueueServerMediaSubsession.cpp  H265QueueServerMediaSubsession.hh  MPEGTSQueueServerMediaSubsession.cpp  MPEGTSQueueServerMediaSubsession.hh  QueueServerMediaSubsession.cpp  QueueServerMediaSubsession.hh  QueueSource.cpp  QueueSource.hh  SinkManager.cpp  SinkManager.hh  UltraGridAudioRTPSink.cpp  (+5 more)
src/modules/receiver/: ExtendedRTSPClient.cpp  ExtendedRTSPClient.hh  H264VideoSdpParser.cpp  H264VideoSdpParser.hh  Handlers.cpp  QueueSink.cpp  QueueSink.hh  SourceManager.cpp  SourceManager.hh
src/modules/sharedMemory/: SharedMemory.cpp  SharedMemory.hh  sharedMemory.cpp  sharedMemory.hh
src/modules/transmitter/: ADTSQueueServerMediaSubsession.cpp  ADTSQueueServerMediaSubsession.hh  ADTSStreamParser.cpp  AudioQueueServerMediaSubsession.hh  Connection.hh  CustomMPEG4GenericRTPSink.cpp  CustomMPEG4GenericRTPSink.hh  H264QueueServerMediaSubsession.cpp  H264QueueServerMediaSubsession.hh  H264VideoStreamSampler.cpp  H264VideoStreamSampler.hh  H264or5QueueServerMediaSubsession.cpp  H264or5QueueServerMediaSubsession.hh  H264or5QueueSource.cpp  H264or5QueueSource.hh  H264or5StartCodeInjector.hh  H265QueueServerMediaSubsession.cpp  H265QueueServerMediaSubsession.hh  JPEGQueueServerMediaSubsession.cpp  JPEGQueueServerMediaSubsession.hh  MPEGTSQueueServerMediaSubsession.cpp  MPEGTSQueueServerMediaSubsession.hh  QueueServerMediaSubsession.cpp  QueueServerMediaSubsession.hh  QueueSource.cpp  QueueSource.hh  SinkManager.cpp  SinkManager.hh  UltraGridVideoRTPSink.cpp  VP8QueueServerMediaSubsession.cpp  VP8QueueServerMediaSubsession.hh
src/network/: AudioQueueServerMediaSubsession.cpp  AudioQueueServerMediaSubsession.hh  ExtendedMediaSession.cpp  ExtendedMediaSession.hh  ExtendedRTSPClient.cpp  ExtendedRTSPClient.hh  H264QueueServerMediaSubsession.cpp  H264QueueServerMediaSubsession.hh  H264QueueSink.cpp  H264QueueSink.hh  H264QueueSource.cpp  H264QueueSource.hh  Handlers.cpp  Handlers.hh  HandlersUtils.cpp  HandlersUtils.hh  QueueServerMediaSubsession.cpp  QueueServerMediaSubsession.hh  QueueSink.cpp  QueueSink.hh  QueueSource.cpp  QueueSource.hh  SinkManager.cpp  SinkManager.hh  SourceManager.cpp  SourceManager.hh  VP8QueueServerMediaSubsession.cpp  VP8QueueServerMediaSubsession.hh
tests/: COMPILE_FAKELIVE  (+39 more)
unitTests/: AVFramedQueueMockup.hh  AVFramedQueueTest.cpp  AudioCircularBufferTest.cpp  AudioMixerFunctionalTest.cpp  ControllerTest.cpp  DecoderPiFunctionalTest.cpp  EncodingDecodingTest.cpp  FilterFunctionalMockup.hh  FilterMockup.hh  FilterTest.cpp  FrameMockup.hh  HeadDemuxerFunctionalTest.cpp  IOInterfaceTest.cpp  Makefile.am  PipelineManagerTest.cpp  RunnableMockup.hh  SlicedVideoFrameQueueTest.cpp  VideoMixerFunctionalTest.cpp  VideoSplitterFunctionalTest.cpp  WorkerTest.cpp  WorkersPoolTest.cpp  X264VideoCircularBufferTest.cpp  X264or5VideoCircularBufferTest.cpp  X265VideoCircularBufferTest.cpp  videoSplitterFunctionalTest  videoSplitterTest  workersPoolTest
unitTests/testsData/: audioMixerFunctionalTestModel_channel_1  videoSplitterFunctionalTestInputImage.rgb  videoSplitterFunctionalTestResImage1.rgb  videoSplitterFunctionalTestResImage2.rgb  videoSplitterFunctionalTestResImage3.rgb  videoSplitterFunctionalTestResImage4.rgb
(+372 files in other folders)
